k8s/oidc-aws/sigstore-tools-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sigstore-tools
  labels:
    app: sigstore-tools
spec:
  selector:
    matchLabels:
      app: sigstore-tools
  template:
    metadata:
      labels:
        app: sigstore-tools
    spec:
      hostPID: true
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: client
        image: ghcr.io/adsk-pset-de-hackathon/sigstore-tools/sigstore-tools:latest
        command: ["sleep"]
        args: ["1000000000"]
        volumeMounts:
        - name: spiffe-workload-api
          mountPath: /run/spire/sockets
          readOnly: true
      volumes:
      - name: spiffe-workload-api
        csi:
          driver: "csi.spiffe.io"
          readOnly: true
