k8s/oidc-aws/server-oidc-service-internal.yaml
# Service definition for the admission webhook
apiVersion: v1
kind: Service
metadata:
  name: spire-oidc-internal
  namespace: spire
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
spec:
  type: LoadBalancer
  selector:
    app: spire-server
  ports:
    - name: https
      port: 443
      targetPort: spire-oidc-port
    - name: healthcheck
      port: 8008
      targetPort: oidc-ready-port
